--- a/templates/rule.html
+++ b/templates/rule.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
 
 {% block head_extra %}
+  <script src="{{ url_for('static', filename='async_helper.js') }}"></script>
   <script>
-    window.addEventListener("load", function () {
+    var ruleName = "{{ rule.get_name() }}"
+    var ruleNameEnc = encodeURI(ruleName)
 
+    function copyHashesSetup() {
       function getCopyFunc(elem) {
         return function (e) {
           navigator
@@ -11,13 +14,40 @@
             .writeText(elem.innerText)
         }
       }
-
       var btn = document.getElementById("copy_hashes_button");
-
       var hashes = document.getElementById("hashes_holder")
-
       btn.onclick = getCopyFunc(hashes)
+    }
 
+    var applyLinterTagURL = "/api/rules/apply_linter_tag?name=" + ruleNameEnc
+
+    function applyLinterTagSetup() {
+      var btn = document.getElementById("mass_tag_button");
+      btn.onclick = async function (e) {
+        var tagName = prompt("Please name the linter rule's tag", "{{ rule.get_linter_rule_tag() }}")
+
+        if (tagName == null) 
+          return;
+        
+        console.log("Got tag name: '" + tagName + "'")
+
+        preview = await httpGETJSON(applyLinterTagURL + "&tag=" + encodeURI(tagName) + "&preview=true")
+        console.log("preview: " + JSON.stringify(preview))
+
+        var apply = confirm("the tag '" + preview.tag + "' will be added to " + preview.added + " files and removed from " + preview.removed + " on the service '" + preview.tag_service + "'. Is this OK?")
+
+        if (apply) {
+          console.log('applying...')
+          response = await httpGETJSON(applyLinterTagURL + "&tag=" + encodeURI(tagName) + "&preview=false")
+          console.log('response: ' + JSON.stringify(response))
+          window.location.reload()
+        }
+      }
+    }
+
+    window.addEventListener("load", function () {
+      copyHashesSetup()
+      applyLinterTagSetup()
     })
   </script>
 {% endblock %}
@@ -42,13 +72,25 @@
     <code>{{ len(server.get_rule_files(rule)) }}</code>
     files detected by this rule</p>
 
-  <p>Paste these hashes into the
+  <h3>Actions</h3>
+
+  <ul>
+    <li>
+      <button id='mass_tag_button'>
+        <span class='icon icon_tag_blue_edit'>Apply Linter Rule's Tag...</span>
+      </button>
+    </li>
+  </ul>
+
+  <h3>Hashes</h3>
+
+  <p>Here are all the SHA-256 hashes for each noncompliant file. You can paste these hashes into the
     <code>system:hashes</code>
-    search in your Hydrus client</p>
+    search in your Hydrus client.</p>
 
   <div class='hashes'>
     <button id='copy_hashes_button'>
-      <span class='icon_page_copy'>Copy All</span>
+      <span class='icon icon_page_copy'>Copy All</span>
     </button>
     <br>
     <code>
