--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,6 +87,31 @@ table td, table th {
   text-align: center;
   vertical-align: middle;
   margin: 2px 2px;
+  width: 150px;
+  height: 125px;
+  border: #91a3b0 solid 1px;
+  background-color: #404048;
+}
+
+.thumbnail:hover {
+  border: #dfe3e6 solid 1px;
+  background-color: #708090;
+}
+
+/* Gallery Pagination */
+
+.pagination {
+  text-align: center;
+  font-family: monospace;
+  font-size: 1em;
+  padding: 2em 0 1em 0;
+  display: block;
+}
+
+.pagination button {
+  border: 1px solid #404048;
+  margin: 0 3px;
+  padding: 2px 6px;
 }
 
 /* Icons */
