--- a/templates/index.html
+++ b/templates/index.html
@@ -21,14 +21,14 @@
         <tr>
           <td style='text-align:right'>
             {% if rule.is_enabled() %}
-              <code>{{ len(server.get_rule_files(rule)) }}</code>
+              <code>{{ len(rule.get_files(rule)) }}</code>
             {% else %}
               Disabled
             {% endif %}
           </td>
           <td>
             <a href='/rules/{{ rule.name }}'>
-              {{ icon_span(text=rule.name, icon=server.get_rule_icon(rule), left=False) }}
+              {{ icon_span(text=rule.name, icon=rule.get_icon(), left=False) }}
             </a>
           </td>
         </tr>
