--- a/static/css/style.css
+++ b/static/css/style.css
@@ -83,14 +83,26 @@ table td, table th {
 /* Files */
 
 .thumbnail {
+  width: 150px;
+  height: 125px;
   display: inline-block;
   text-align: center;
   vertical-align: middle;
   margin: 2px 2px;
-  width: 150px;
-  height: 125px;
   border: #91a3b0 solid 1px;
   background-color: #404048;
+}
+
+.thumbnail img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+@media screen and (max-width: 1500px) {
+  .thumbnail {
+    width: 85px;
+    height: 85px;
+  }
 }
 
 .thumbnail:hover {
